==========
Change Log
==========

Version 3.0.1 -
---------------
- Fixed bug where warn_on_multiple_string_args_to_oneof warning is raised
  even when not enabled.


Version 3.0.0 -
---------------
- A consolidated list of all the changes in the 3.0.0 release can be found in
  docs/whats_new_in_3_0_0.rst.
  (https://github.com/pyparsing/pyparsing/blob/master/docs/whats_new_in_3_0_0.rst)


Version 3.0.0.final -
---------------------
- Added support for python -W warning option to call enable_all_warnings() at startup.
  Also detects setting of PYPARSINGENABLEALLWARNINGS environment variable to any non-blank
  value.

- Fixed named results returned by `url` to match fields as they would be parsed
  using urllib.parse.urlparse.

- Early response to `with_line_numbers` was positive, with some requested enhancements:
  . added a trailing "|" at the end of each line (to show presence of trailing spaces);
    can be customized using `eol_mark` argument
  . added expand_tabs argument, to control calling str.expandtabs (defaults to True
    to match parseString)
  . added mark_spaces argument to support display of a printing character in place of
    spaces, or Unicode symbols for space and tab characters
  . added mark_control argument to support highlighting of control characters using
    '.' or Unicode symbols, such as "␍" and "␊".

- Modified helpers common_html_entity and replace_html_entity() to use the HTML
  entity definitions from html.entities.html5.

- Updated the class diagram in the pyparsing docs directory, along with the supporting
  .puml file (PlantUML markup) used to create the diagram.

- Added global method `autoname_elements()` to call `set_name()` on all locally
  defined `ParserElements` that haven't been explicitly named using `set_name()`, using
  their local variable name. Useful for setting names on multiple elements when
  creating a railroad diagram.

            a = pp.Literal("a")
            b = pp.Literal("b").set_name("bbb")